# ghgQtSqlCipherDriverForWindows

./: CMakeLists.txt  README.md
sqlcipher/: README.txt
sqlcipher/lib/: sqlite3.def  sqlite3.exp  sqlite3.lib
src/: smain.cpp
